EA-3619 and EA-3620 add record ans serach workflows